--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,14 +19,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility Versions.sourceCompatibility
+        targetCompatibility Versions.targetCompatibility
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':repository')
+
     implementation Deps.appCompat
     implementation Deps.constraintLayout
 
