--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -25,8 +25,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':core')
-    compile Deps.kotlinStdlib
+    api project(':core')
+    implementation Deps.kotlinStdlib
 }
 repositories {
     mavenCentral()
